--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springboot-admin</module>
         <module>spring-boot-eureka</module>
         <module>customer-service</module>
+        <module>spring-data-jpa</module>
     </modules>
 
 
