--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-boot-eureka</module>
         <module>customer-service</module>
         <module>spring-data-jpa</module>
+        <module>spring-graphql</module>
     </modules>
 
 
