--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>customer-service</module>
         <module>spring-data-jpa</module>
         <module>spring-graphql</module>
+        <module>spring-rabbitmq</module>
     </modules>
 
 
